fix(web): Remove vertical breadcrumb margin to prevent shifting

--- a/web/src/styles/Breadcrumbs.scss
+++ b/web/src/styles/Breadcrumbs.scss
@@ -10,7 +10,7 @@
     .breadcrumb {
         p {
             cursor: pointer;
-            margin: 5px 10px;
+            margin: 0 10px;
             display: inline-block;
             color: $link-color;
 
